Fix truncated text in Update dialog

--- a/app/src/main/resources/com/oracle/javafx/scenebuilder/app/css/UpdateSceneBuilderDialog.css
+++ b/app/src/main/resources/com/oracle/javafx/scenebuilder/app/css/UpdateSceneBuilderDialog.css
@@ -52,7 +52,9 @@
 }
 
 .download_scenebuilder-dialog .main-container > .latest-version-text {
-    -fx-max-width: 420;
+    -fx-pref-width: 420;
+    -fx-max-width: Infinity;
+    -fx-padding: 15 0 0 0;
     -fx-wrap-text: true;
 }
 
